Small update to the "Getting Started" section. Changed the "Reference" header to "Explore What's Possible" and added links to key features.

--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -241,7 +241,7 @@ A few more steps to get the most out of Open WebUI:
 You're running. You're connected. Ready to go deeper?
 
 - **[Upload documents and use RAG →](\features\rag\index.md)** Ground responses in your data
-- **[Enable web search →](\features\web-search\searxng.md)** Let models access current information _(SearXNG Recommended)_
+- **[Enable web search →](\features\web-search\_category_.json)** Let models access current information _(SearXNG Recommended)_
 - **[Generate images →](\features\image-generation-and-editing\_category_.json)** Connect to AUTOMATIC1111, ComfyUI, or DALL-E _(ComfyUI Recommended)_
 - **[Explore all features →](/features)** Voice, tools, pipelines, and more
 
