Add link to "Getting Started" section.

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -54,6 +54,8 @@ Run it as a server and access it securely across all your devices. Add users whe
 
 [Explore all features →](/features)
 
+[Ready to get started? →](\getting-started\index.md)
+
 ---
 
 ## Quick Start with Docker 🐳
@@ -147,6 +149,7 @@ docker run -d -p 3000:8080 \
 Once it's running, open [localhost:3000](http://localhost:3000). That's it—you're in.
 
 **Need more options?** Kubernetes, Python install, air-gapped deployment, and more:  
+
 [See all installation methods →](/getting-started/quick-start)
 
 ---
